# Mindscnai

./: .replit  README.md  app.py  encryption.key  pyproject.toml  replit.md  start_servers.py  test_eeg_64ch.edf  websocket_server.py
.local/state/replit/agent/filesystem/: filesystem_state.json
analysis/: brain_metrics.py  brain_state_classifier.py
auth/: authenticator.py
components/: websocket_signal_viewer.py
config/: quantum_config.py
database/: db_manager.py  models.py
exports/: admin_predictions.json  admin_raw.json  doctor_predictions.json  researcher_metrics.csv  researcher_predictions.json  test_processed_doctor.json
exports/batch/: export_2.csv
models/: classical_ml.py  quantum_enhanced.py  quantum_ml.py
pages/: 1_Dashboard.py  2_Predict_Model.py  2_Upload_Analysis.py.old  3_Model_Comparison.py  3_Results.py  4_Live_Stream.py.old  4_User_Management.py  5_Activity_Logs.py
preprocessing/: advanced_signal_processing.py  channel_selector.py  eeg_processor.py
processing/: batch_processor.py
reports/: pdf_generator.py
streaming/: brain_state_ml.py  edf_replay.py  inference_engine.py  ring_buffer.py  websocket_bridge.py
utils/: data_export.py  helpers.py  security.py
visualization/: signal_plots.py
